creando sitio web

--- a/templates/sitio/libros.html
+++ b/templates/sitio/libros.html
@@ -1,3 +1,54 @@
 {% include'sitio/cabecera.html'%}
+
+    <div class="row">
+
+        <div class="col-md-3">
+            <div class="card">
+                <img class="card-img-top" src="https://4.bp.blogspot.com/-Z09tT-J0pCo/WpIBF638tzI/AAAAAAAALNw/N0dye6jAIdUhjwraLahAfQsDYywVXu19gCLcBGAs/s1600/aula-virtual.jpg" alt="Title">
+                <div class="card-body">
+                    <h4 class="card-title">fisico-virtual</h4>
+                    <p class="card-text">MAD</p>
+                    <a name="" id="" class="btn btn-primary" href="#" role="button">Descargar</a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-3">
+            <div class="card">
+                <img class="card-img-top" src="https://4.bp.blogspot.com/-Z09tT-J0pCo/WpIBF638tzI/AAAAAAAALNw/N0dye6jAIdUhjwraLahAfQsDYywVXu19gCLcBGAs/s1600/aula-virtual.jpg" alt="Title">
+                <div class="card-body">
+                    <h4 class="card-title">fisico-virtual</h4>
+                    <p class="card-text">MAD</p>
+                    <a name="" id="" class="btn btn-primary" href="#" role="button">Descargar</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="card">
+                <img class="card-img-top" src="https://4.bp.blogspot.com/-Z09tT-J0pCo/WpIBF638tzI/AAAAAAAALNw/N0dye6jAIdUhjwraLahAfQsDYywVXu19gCLcBGAs/s1600/aula-virtual.jpg" alt="Title">
+                <div class="card-body">
+                    <h4 class="card-title">fisico-virtual</h4>
+                    <p class="card-text">MAD</p>
+                    <a name="" id="" class="btn btn-primary" href="#" role="button">Descargar</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="card">
+                <img class="card-img-top" src="https://4.bp.blogspot.com/-Z09tT-J0pCo/WpIBF638tzI/AAAAAAAALNw/N0dye6jAIdUhjwraLahAfQsDYywVXu19gCLcBGAs/s1600/aula-virtual.jpg" alt="Title">
+                <div class="card-body">
+                    <h4 class="card-title">fisico-virtual</h4>
+                    <p class="card-text">MAD</p>
+                    <a name="" id="" class="btn btn-primary" href="#" role="button">Descargar</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
 seccion de libros
+
 {% include'sitio/pie.html'%}
