--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -27,8 +27,24 @@
                         Inicio de sesion
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">Usuario</h4>
-                        <p class="card-text">Contraseña</p>
+                        <form action="/admin/login" method="post">
+
+
+                            <div class="mb-3">
+                            <label for="txtUsuario" class="form-label">Usuario</label>
+                            <input type="text"
+                                class="form-control" name="txtUsuario" id="txtUsuario" aria-describedby="helpId" placeholder="Escriva su Usuario">
+                            </div>
+
+                            <div class="mb-3">
+                            <label for="txtPasword" class="form-label">contraseña:</label>
+                            <input type="text"
+                                class="form-control" name="txtPasword" id="txtPasword" aria-describedby="helpId" placeholder="Escriva su contraseña">
+                            
+                            </div>
+
+                            <button type="button" class="btn btn-primary">Entrar</button>
+                        </form>
                     </div>
                     <div class="card-footer text-muted">
                         
