--- a/templates/admin/cabecera.html
+++ b/templates/admin/cabecera.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="/admin/" aria-current="page">Inicio <span class="visually-hidden">(current)</span></a>
+            <a class="nav-item nav-link active" href="/admin" aria-current="page">Inicio <span class="visually-hidden">(current)</span></a>
             <a class="nav-item nav-link" href="libros">Libros</a>
             <a class="nav-item nav-link" href="cerrar">Cerrar</a>
             <a class="nav-item nav-link" href="/">Sitio Web</a>
