--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -43,7 +43,7 @@
                             
                             </div>
 
-                            <button type="button" class="btn btn-primary">Entrar</button>
+                            <button type="submit" class="btn btn-primary">Entrar</button>
                         </form>
                     </div>
                     <div class="card-footer text-muted">
