--- a/templates/admin/libros.html
+++ b/templates/admin/libros.html
@@ -9,7 +9,7 @@
                     Datos del libro
                 </div>
                 <div class="card-body">
-                    <form action="/admin/libros/guardar" method="post" enctype="multipart/form-data">
+                    <form action="/admin/libros/guardar"method="post"     enctype="multipart/form-data">
                         <div class="mb-3">
                             <label for="txtNombre" class="form-label">Nombre:</label>
                             <input type="text"
@@ -41,15 +41,15 @@
                 <table class="table table-primary">
                     <thead>
                         <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Imagen</th>
-                            <th scope="col">URL</th>
-                            <th scope="col">Acciones</th>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Imagen</th>
+                            <th>URL</th>
+                            <th>Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="">
+                        <tr>
                             <td>1</td>
                             <td>Virtual</td>
                             <td>imagen.jpg</td>
@@ -65,7 +65,5 @@
         
     </div>
 </div>
-
-
 
 {% include'admin/pie.html'%}
