--- a/templates/admin/libros.html
+++ b/templates/admin/libros.html
@@ -49,13 +49,21 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {%for libro in libros%}
                         <tr>
-                            <td>1</td>
-                            <td>Virtual</td>
-                            <td>imagen.jpg</td>
-                            <td>HTTTP:JDT</td>
-                            <td>Eliminar</td>
+                            <td>{{libro[0]}}</td>
+                            <td>{{libro[1]}}</td>
+                            <td>{{libro[2]}}</td>
+                            <td>{{libro[3]}}</td>
+                            <td>
+                                <form action="/admin/libros/borrar" method="post">
+
+                                    <input value="{{libro[0]}}" type="text" name="txtID" id="txtID">
+                                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                                </form>
+                            </td>
                         </tr>
+                        {%endfor%}
                         
                     </tbody>
                 </table>
