competando administrador del sitio

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -27,6 +27,7 @@
                         Inicio de sesion
                     </div>
                     <div class="card-body">
+                        
                         <form action="/admin/login" method="post">
 
 
@@ -37,9 +38,9 @@
                             </div>
 
                             <div class="mb-3">
-                            <label for="txtPasword" class="form-label">contraseña:</label>
+                            <label for="txtPassword" class="form-label">Contraseña:</label>
                             <input type="text"
-                                class="form-control" name="txtPasword" id="txtPasword" aria-describedby="helpId" placeholder="Escriva su contraseña">
+                                class="form-control" name="txtPassword" id="txtPassword" aria-describedby="helpId" placeholder="Escriva su contraseña">
                             
                             </div>
 
