--- a/templates/sitio/cabecera.html
+++ b/templates/sitio/cabecera.html
@@ -19,7 +19,7 @@
         <a class="nav-item nav-link active" href="/" aria-current="page">inicio <span class="visually-hidden">(current)</span></a>
         <a class="nav-item nav-link" href="/libros">libros</a>
         <a class="nav-item nav-link" href="/nosotros">nosotros</a>
-        <a class="nav-item nav-link" href="/admin">login</a>
+        <a class="nav-item nav-link" href="/admin/login">login</a>
     </div>
 </nav>
     <div class="container"> 
