--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,9 +1,11 @@
 {% include'admin/cabecera.html'%}
-<div class="p-5 mb-4 bg-light rounded-3">
+
+<div class="p-5 mb-4 bg-light 3">
     <div class="container-fluid py-5">
-    <h1 class="display-5 fw-bold">Bienvenid@ al administrador del sitio</h1>
-    <p class="col-md-8 fs-4">Aqui podra administrar contenido de los libros del sitio web.
+    <h1 class="display-3">Bienvenid@ <strong>{{session['usuario']}}</strong> al administrador del sitio Web</h1>
+    <p class="lead">Aqui podra administrar contenido de los libros del sitio web.
         <a class="btn btn-primary btn-lg"href="/libros" role="button">Empezar la gestion</a>
+    </p>    
     </div>
 </div>
 {% include'admin/pie.html'%}
