--- a/templates/sitio/libros.html
+++ b/templates/sitio/libros.html
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     <h4 class="card-title">{{libro[1]}}</h4>
                     <p class="card-text">MAD
-                    <a name="" id="" class="btn btn-primary" href="#" role="button">Descargar</a>
+                    <a name="" id="" class="btn btn-primary" href="{{libro[3]}}" role="button">Descargar</a>
                     </p>
                 </div>
             </div>
