--- a/templates/sitio/index.html
+++ b/templates/sitio/index.html
@@ -2,10 +2,12 @@
   <div class="p-5 bg-light">
       <div class="container">
         <h1 class="display-3">Bienvenid@</h1>
+        <p class="lead">Empezar con nuestro sitio web </p>
+        <hr class"my-2">
+
         <p class="lead">
-        <a clas="btn btn primary btn-lg"href="jumbo acction link" role="button">Bienvenid@</a>  
+            <a class="btn btn-success btn-lg" href="/libros"role="button">Ver libros disponibles</a>  
         </p>
       </div>
   </div>
   {% include'sitio/pie.html'%}
-  
