--- a/templates/sitio/nosotros.html
+++ b/templates/sitio/nosotros.html
@@ -1,5 +1,10 @@
 {% include'sitio/cabecera.html'%}
-
-nosotros
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Nosotros</h4>
+        <p class="card-text">Somos un equipo de emprendedores disponibles para solucionar nesesidades tecnologicas unicas a las tendendencias locales</p>
+    </div>
+    <img class="card-img-top" src="https://cdn.pixabay.com/photo/2021/08/04/13/06/software-developer-6521720_960_720.jpg" alt="Title">
+</div>
 
 {% include'sitio/pie.html'%}
