--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -4,7 +4,7 @@
     <div class="container-fluid py-5">
     <h1 class="display-3">Bienvenid@ <strong>{{session['usuario']}}</strong> al administrador del sitio Web</h1>
     <p class="lead">Aqui podra administrar contenido de los libros del sitio web.
-        <a class="btn btn-primary btn-lg"href="/libros" role="button">Empezar la gestion</a>
+        <a class="btn btn-primary btn-lg"href="/admin/libros" role="button">Empezar la gestion</a>
     </p>    
     </div>
 </div>
