--- a/templates/admin/libros.html
+++ b/templates/admin/libros.html
@@ -37,8 +37,7 @@
             
         </div>
         <div class="col-md-7">
-            <div class="table-responsive">
-                <table class="table table-primary">
+                <table class="table table-bordered">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -56,13 +55,19 @@
                             <td>
 
                                 <img width="60" src="/img/{{libro[2]}}" class="img-fluid rounded-top" alt="">
-                                {{libro[2]}}
+                                
 
                             </td>
-                            <td>{{libro[3]}}</td>
+                            <td>
+                                
+                                
+                                
+                                <a name="" id="" class="btn btn-success" href="{{libro[3]}}" role="button">Enlace...</a>
+
+                            </td>
                             <td>
                                 <form action="/admin/libros/borrar" method="post">
-                                    <input value="{{libro[0]}}" type="text" name="txtID" id="txtID">
+                                    <input value="{{libro[0]}}" type="hidden" name="txtID" id="txtID">
                                     <button type="submit" class="btn btn-danger">Eliminar</button>
                                 </form>
                             </td>
@@ -71,7 +76,6 @@
                         
                     </tbody>
                 </table>
-            </div>
             
         </div>
         
