--- a/templates/sitio/cabecera.html
+++ b/templates/sitio/cabecera.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand navbar-dark bg-primary">
     <div class="nav navbar-nav">
-        <a class="nav-item nav-link active" href="/" aria-current="page">Inicio <span class="visually-hidden">(current)</span></a>
+        <a class="nav-item nav-link" href="/">Inicio</a>
         <a class="nav-item nav-link" href="/libros">Libros</a>
         <a class="nav-item nav-link" href="/nosotros">Nosotros</a>
         <a class="nav-item nav-link" href="/admin/login">Login</a>
