--- a/templates/sitio/index.html
+++ b/templates/sitio/index.html
@@ -4,7 +4,7 @@
         <h1 class="display-3">Bienvenid@</h1>
         <p class="lead">Empezar con nuestro sitio web </p>
         <hr class"my-2">
-
+        <p>More info</p>
         <p class="lead">
             <a class="btn btn-success btn-lg" href="/libros"role="button">Ver libros disponibles</a>  
         </p>
